# abfallkalender

./: Cargo.toml  README.md  extract-from-pdf.py  index.html  scrape.py
src/: client.rs  geo.rs  main.rs  scrape.rs
templates/: index.html
