[package]
name = "abfallkalender"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0"
regex = "1"
reqwest = "0.11"
select = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0", default-features = false }
tokio = { version = "1", features = ["full"] }
